stops the nav__items from running into the title in the nav bar-- fixes the overlap

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -594,8 +594,8 @@ input {
     background-color: transparent;
     opacity: 1;
     /* font-size: 40px; */
-    font-size: 30px;
     padding-top: 1rem;
+    padding-left: 30rem;
     flex-direction: row;
     justify-content: flex-end;
   }
@@ -610,7 +610,7 @@ input {
     padding: 0 1rem;
     margin: 3rem 0;
     transition: color 150ms ease-out;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   
   }
 
